[package]
name = "serde_bytes"
version = "0.11.6" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Optimized handling of `&[u8]` and `Vec<u8>` for Serde"
repository = "https://github.com/serde-rs/bytes"
documentation = "https://docs.serde.rs/serde_bytes/"
keywords = ["serde", "serialization", "no_std"]
categories = ["encoding"]
readme = "README.md"
edition = "2018"
rust-version = "1.31"

[features]
default = ["std"]
std = ["serde/std"]
alloc = ["serde/alloc", "dep_alloc"]
rustc-dep-of-std = ["core", "alloc", "compiler_builtins/rustc-dep-of-std", "serde/rustc-dep-of-std"]

[dependencies]
dep_alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
compiler_builtins = { version = "0.1.0", optional = true }
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
serde = { git = "https://github.com/fortanix/serde.git", branch = "raoul/stdlib_1.0.136", default-features = false }

[dev-dependencies]
bincode = "1.0"
serde_derive = "1.0"
serde_test = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[patch.crates-io]
serde = { git = "https://github.com/fortanix/serde.git", branch = "master" }
